# dont-be-late

./: .gitignore  README.md  com.ahmed.dont-be-late.plist  config.yaml  design.md  install.sh  pyproject.toml
src/dont_be_late/: __main__.py  config.py  gcal.py  interrupt.py  overlay.py  scheduler.py
